[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-privacy-env"
version = "1.0.0"
description = "An OpenEnv environment for PII remediation tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "openai==1.13.3",
    "openenv-core"
]

[tool.setuptools]
py-modules = ["env", "models", "main"]
